--- a/styles.css
+++ b/styles.css
@@ -18,16 +18,7 @@
     line-height: normal;
 }
 
-
-h1,h3,h5{
-    font-family: Netflix Sans,Helvetica Neue,Segoe UI,Roboto,Ubuntu,sans-serif;
-    text-align: center;
-    color: white;
-}
-
-
-
-button{
+.sign-up{
     color: #fff;
     margin-top: .5rem;
     font-size: 1rem;
@@ -39,6 +30,34 @@ button{
     line-height: normal;
     padding: 7px 17px;
 }
+
+h1,h3,h5{
+    font-family: Netflix Sans,Helvetica Neue,Segoe UI,Roboto,Ubuntu,sans-serif;
+    text-align: center;
+    color: white;
+    margin-left: 155px;
+    margin-right : 155px;
+}
+h1{
+    font-size: 50px;
+    font-family:Netflix Sans,Helvetica Neue,Segoe UI,Roboto,Ubuntu,sans-serif;
+    line-height: 55px;
+}
+h3{
+    font-weight: 500;
+    font-size: 26px;
+}
+h5{
+     font-size: 19.2px;
+      font-weight: 400;
+}
+form{
+    text-align: center;
+    font-size: 19px;
+}
+
+
+
 
 
 
