--- a/styles.css
+++ b/styles.css
@@ -1,67 +1,92 @@
-.section-1{
-    margin-top: -8px;
-     margin-left: -8px;
-     padding-right:20px;
-    width: 100%;
-    height:100vh;
-    background-image: url('../images/hero.jpg');
-    background-size: cover;
-    display: block;
+.section-1 {
+  margin-top: -8px;
+  margin-left: -8px;
+  padding-right: 20px;
+  width: 100%;
+  height: 100vh;
+  background-image: url("./images/hero.jpg");
+  background-size: cover;
+  display: block;
 }
-.header{
-    padding-top: 18px ;
-    padding-left: 40px;
-    padding-right: 40px;
+.header {
+  padding-top: 18px;
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-bottom: 120px;
 }
-#netflix-logo{
-    fill: #e50914;
-    line-height: normal;
-}
-
-.sign-up{
-    color: #fff;
-    margin-top: .5rem;
-    font-size: 1rem;
-    font-weight: 400;
-    background-color: #e50914;
-    float: right;
-    border: red;
-    border-radius: 3px;
-    line-height: normal;
-    padding: 7px 17px;
+#netflix-logo {
+  fill: #e50914;
+  line-height: normal;
 }
 
-h1,h3,h5{
-    font-family: Netflix Sans,Helvetica Neue,Segoe UI,Roboto,Ubuntu,sans-serif;
-    text-align: center;
-    color: white;
-    margin-left: 155px;
-    margin-right : 155px;
-}
-h1{
-    font-size: 50px;
-    font-family:Netflix Sans,Helvetica Neue,Segoe UI,Roboto,Ubuntu,sans-serif;
-    line-height: 55px;
-}
-h3{
-    font-weight: 500;
-    font-size: 26px;
-}
-h5{
-     font-size: 19.2px;
-      font-weight: 400;
-}
-form{
-    text-align: center;
-    font-size: 19px;
+.sign-up {
+  color: #fff;
+  margin-top: 0.5rem;
+  font-size: 1rem;
+  font-weight: 400;
+  background-color: #e50914;
+  float: right;
+  border: red;
+  border-radius: 3px;
+  line-height: normal;
+  padding: 7px 17px;
 }
 
-
-
-
-
-
-/*body{
+h1,
+h3,
+h5 {
+  font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu, sans-serif;
+  text-align: center;
+  color: #fff;
+  margin-left: 155px;
+  margin-right: 155px;
 }
-h1{
+h1 {
+  font-size: 50px;
+  font-family: Netflix Sans, Helvetica Neue, sans-serif;
+  line-height: 55px;
+  font-weight: 600;
+}
+
+h3 {
+  font-weight: 500;
+  font-size: 28px;
+  margin-top: -20px;
+}
+
+h5 {
+  font-size: 19.2px;
+  font-weight: 500;
+}
+form {
+  text-align: center;
+  font-size: 26px;
+  margin-top: -32px;
+  
+}
+.get-started {
+  background-color: #e50914;
+  color: #fff;
+  border-color: #e50914;
+  cursor: pointer;
+  font-weight: 600;
+  height: 50px;
+  font-size: 26px;
+  margin-top: 17px;
+}
+.email {
+  width: 470px;
+  height: 55px;
+}
+
+hr.style-one {
+  margin-top: 0px;
+  width: 100%;
+border: 0;
+display:block;
+height: 10px;
+  background-color:rgb(34,34,34);
+}
+.section-2{
+  background-color: black;
 }
