--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
 .section-1 {
   margin-top: -8px;
-  margin-left: -8px;
   padding-right: 20px;
   width: 100%;
   height: 100vh;
@@ -10,21 +9,20 @@
   border-bottom: 8px solid rgb(34,34,34);
 }
 .header {
-  padding-top: 18px;
+  padding-top: 30px;
   padding-left: 40px;
   padding-right: 40px;
   padding-bottom: 120px;
 }
 #netflix-logo {
-  fill: #e50914;
-  line-height: normal;
+  fill: #e50914; 
 }
 
 .sign-in {
   color: #fff;
   margin-top: 0.5rem;
   font-size: 1rem;
-  font-weight: 600;
+  font-weight: 700;
   background-color: #e50914;
   float: right;
   border: red;
@@ -34,55 +32,65 @@
 }
 
 h1,
-h3,
+h3, h4,
 h5 {
   font-family: Netflix Sans, Helvetica Neue, Segoe UI, Roboto, Ubuntu, sans-serif;
   text-align: center;
   color: #fff;
- 
 }
 h1 {
   font-size: 53px;
   font-family: Netflix Sans, Helvetica Neue, sans-serif;
-  line-height: 55px;
   font-weight: 500;
 }
-
 h3 {
-  font-weight: 500;
-  font-size: 28px;
-  margin-top: -20px;
+  font-weight: 300;
+  font-size: 28px; 
+}
+
+.section-1 h1{
+  margin-top: 40px;
+}
+.section-1 h3{
+  margin-bottom: 35px;
+  text-align: center;
+}
+.section-3 h1{
+ margin-top: 120px;
 }
 
 h5 {
   font-size: 19.2px;
-  font-weight: 500;
+  font-weight: 400;
 }
+
 form {
   text-align: center;
   font-size: 26px;
-  margin-top: -32px;
-  
+  margin-top: 20px;
 }
 .get-started {
   background-color: #e50914;
   color: #fff;
   border-color: #e50914;
   cursor: pointer;
-  font-weight: 600;
+  font-weight: 400;
   font-size: 26px;
-  margin-top: 25px;
-  margin-left: -6px;
-  margin-bottom:  30px;
-  padding-bottom: 10px;
-  padding: 16px;
-  padding-right: 30px;  
+  margin: 0;
+  height: 100%;
+  padding-right: 30px;
+  padding-left: 30px;
+  margin-left: -10px;
 }
+form, .get-started {
+    height: 56px;
+  }
 
 .email {
   width: 480px;
   height: 56px;
-  padding-top: 3px;
+  padding: 3px;
+
 }
 ::placeholder{
   font-weight: 600;
@@ -90,21 +98,167 @@ form {
   padding-left: 10px;
 }
 
-.section-2, .section-3, .section-4, .section-5, .section-6, .section-7{
+.section-2, .section-3, .section-4, .section-5 {
   background-color: black;
    border-bottom: 8px solid rgb(34,34,34);
-   
+}
+.section-6, .section-7{
+  background-color: black;
 }
 .section-2{
   width: 100%;
   height: 80vh;
 }
+.section-2 h1, h3{
+  text-align: left;
+  margin-left: 60px;
+}
 .enjoy-tv{
   margin-top: 110px;
 }
+.tv-image{
+  margin-left: 80px;
+}
+video{
+  margin-bottom: 57rem;
+  width: 400px;
+   height:300px;
+   
+}
+.mobile-image{
+  width: 10px;
+}
+.section-3 h1, h3{
+  text-align: left;
+   margin-left: 60px;
+}
+.section-4 h1, h3{
+  text-align: left;
+   margin-left: 60px;
+}
+.section-5 h1, h3{
+  text-align: left;
+   margin-left: 60px;
+}
+.section-5 h1{ 
+  margin-top: 110px;
+}
+.section-6 h1{ 
+  padding-top: 90px;
+  padding-bottom: 40px;
+  background-color: black;
+}
+
 .grid-container {
   display: grid; /* sets the container as a grid */
   grid-template-columns: repeat(2, 1fr); /* creates two columns of equal width */
   grid-gap: 10px; /* adds a gap of 10px between the items */
 padding: 50px;
 }
+.accordion{
+    margin: 60px auto;
+    width: 100%;
+    max-width: 750px;
+}
+
+.accordion ul{
+    list-style: none;
+    width: 100%;
+    padding: 5px;
+}
+
+.accordion ul label{
+    display: flex;
+    align-items: center;
+    padding: 20px;
+    font-size: 18px;
+    font-weight: 600;
+    background: #303030;
+    margin-bottom: 2px;
+    cursor: pointer;
+    position: relative;
+    transition: 0.4s;
+}
+
+label::after{
+    content: '+';
+    font-size: 34px;
+    position: absolute;
+    right: 20px;
+    transition: transform 0.5s;
+    color: #fff;
+}
+
+input[type="radio"]{
+    display: none;
+}
+
+.accordion .content{
+    background: #303030;
+    text-align: left;
+    padding: 0 20px;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.5s, padding 0.5s;
+}
+
+.accordion input[type="radio"]:checked + label + .content{
+    max-height: 600px;
+    padding: 30px 20px;
+
+}
+
+.accordion input[type="radio"]:checked + label::after{
+    transform: rotate(135deg);
+}
+
+
+
+.neww{
+  padding-top: 60px;
+background-color: black;
+ padding-bottom: 70px;
+   border-bottom: 8px solid rgb(34,34,34);
+}
+.section-7 p{
+  font-weight: 300;
+}
+
+.footer{
+    padding: 50px 15% 10px;
+    border-top: 6px solid #333;
+    color: #777;
+
+}
+
+.footer h2{
+    font-size: 18px;
+    font-weight: 400;
+    margin-bottom: 30px;
+}
+
+.footer .column{
+    flex-basis: 25%;
+    flex-grow: 1;
+    margin-bottom: 20px;
+}
+
+.footer .column a{
+    display: block;
+    text-decoration: none;
+    color: #777;
+    font-size: 14px;
+    margin-bottom: 10px;
+}
+
+.footer .row{
+    align-items: flex-start;
+    padding: 10px 0;
+}
+
+.copyright-text{
+    font-size: 14px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+
